# tf-qua-trade-doks

./: .example.env  .gitignore  .terraform.lock.hcl  Makefile  README.md  config.backtest.json  config.backtest.json.bak  context  data.tf  main.tf  outputs.tf  providers.tf  variables.tf
.helm/cache/: cloudflared-2.2.2.tgz
environments/: dev.tfvars  prd.tfvars
examples/minimal/: README.md  terraform.tfvars
modules/addons/cloudflared_tunnel/: main.tf
modules/apps/freqtrade_bot/: main.tf
modules/apps/freqtrade_bot/chart/: Chart.yaml  values.yaml
modules/apps/freqtrade_bot/chart/templates/: _helpers.tpl  configmap.yaml  deploy.yaml  strategy-configmap.yaml
modules/cluster/do_doks/: main.tf
strategies/: Dockerfile  pyproject.toml
strategies/src/: SmaRsiATRStrategy.py  basic.py
