[project]
name = "freqtrade-strategies"
version = "0.1.0"
description = "Shared Freqtrade strategies for bots"
requires-python = ">=3.11"

dependencies = [
  "freqtrade",
  "pandas"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]